[project]
name = "kohdalab-iv"
version = "0.1.0"
description = "KohdaLab DC IV/VI measurement tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyvisa>=1.14",
    "tomli>=2; python_version<'3.11'",
]

[project.optional-dependencies]
gui = [
    "pyside6>=6.7",
    "pyqtgraph>=0.13",
]
notebook = [
    "ipython",
    "matplotlib>=3.8",
    "jupyterlab",
]

[project.scripts]
kohdalab-iv = "kohdalab_iv.api.cli:main"
kohdalab-iv-gui = "kohdalab_iv.apps.iv_gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kohdalab_iv = ["instruments/sources/*.toml", "instruments/meters/*.toml"]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
