[project]
name = "kohdalab-iv"
version = "0.2.0"
description = "KohdaLab DC IV/VI measurement tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "KohdaLab" }]
keywords = ["instrument-control", "iv-measurement", "laboratory-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyvisa>=1.14",
    "tomli>=2; python_version<'3.11'",
]

[project.urls]
Documentation = "https://github.com/woolen-yarn/kohdalab-iv/tree/main/docs"
Issues = "https://github.com/woolen-yarn/kohdalab-iv/issues"
Repository = "https://github.com/woolen-yarn/kohdalab-iv"

[project.optional-dependencies]
gui = [
    "pyside6>=6.7",
    "pyqtgraph>=0.13",
]
notebook = [
    "ipython",
    "matplotlib>=3.8",
    "jupyterlab",
]

[project.scripts]
kohdalab-iv = "kohdalab_iv.api.cli:main"
kohdalab-iv-gui = "kohdalab_iv.apps.iv_gui:main"

[tool.uv]
python-preference = "only-managed"
python-downloads = "automatic"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kohdalab_iv = [
    "resources/*.json",
    "instruments/sources/*.toml",
    "instruments/meters/*.toml",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["kohdalab_iv"]

[tool.coverage.report]
fail_under = 45
show_missing = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pyyaml",
    "ruff",
]
package = [
    "check-wheel-contents",
    "pyyaml",
    "twine",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]
xfail_strict = true
