[project]
name = "kohdalab-iv"
version = "0.2.0"
description = "KohdaLab DC IV/VI measurement tools"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "KohdaLab" }]
keywords = ["instrument-control", "iv-measurement", "laboratory-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyvisa>=1.14",
]

[project.urls]
Documentation = "https://github.com/Kohdalab/kohdalab-iv/tree/main/docs"
Issues = "https://github.com/Kohdalab/kohdalab-iv/issues"
Repository = "https://github.com/Kohdalab/kohdalab-iv"

[project.optional-dependencies]
gui = [
    "pyside6>=6.7",
    "pyqtgraph>=0.13",
]
notebook = [
    "ipython",
    "matplotlib>=3.8",
    "jupyterlab",
]

[project.scripts]
kohdalab-iv = "kohdalab_iv.api.cli:main"
kohdalab-iv-gui = "kohdalab_iv.apps.iv_gui:main"

[tool.uv]
python-preference = "only-managed"
python-downloads = "automatic"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kohdalab_iv = [
    "resources/*.json",
    "instruments/sources/*.toml",
    "instruments/meters/*.toml",
]

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]

[tool.mypy]
python_version = "3.13"
files = ["src/kohdalab_iv"]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
relative_files = true
source = ["kohdalab_iv"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[dependency-groups]
dev = [
    "jsonschema>=4.23",
    "mypy",
    "pytest",
    "pytest-cov",
    "pyyaml",
    "pre-commit",
    "ruff",
]
package = [
    "check-wheel-contents",
    "pyyaml",
    "twine",
]
audit = [
    "pip-audit",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]
xfail_strict = true
